Добавлена связь с сервером

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,4 +15,10 @@ code {
 #root {
   max-width: 1000px;
   margin: auto;
+  padding: 0 10px;
+}
+
+.ant-spin.ant-spin-spinning {
+  display: block;
+  margin: 0 auto;
 }
