--- a/src/components/forms/fields/EditorField/EditorField.scss
+++ b/src/components/forms/fields/EditorField/EditorField.scss
@@ -26,31 +26,62 @@
   min-height: 480px;
 }
 
-.ql-container p {
-  margin-bottom: 14px;
-  font-size: 14px;
-}
+.article-editor .ql-container {
+  font-size: 16px;
+  line-height: 1.56;
+  color: #24292e;
 
-.ql-container h1, .ql-container h2, .ql-container h3, .ql-container h4, .ql-container h5 {
-  font-weight: 600;
-}
+  & h1,
+  & h2,
+  & h3 {
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+    color: #24292e;
+  }
 
-.ql-container h1 {
-  margin-bottom: 24px;
-}
+  & h2 {
+    font-size: 24px;
+    line-height: 32px;
+    margin-bottom: 32px;
+  }
 
-.ql-container h2 {
-  margin-bottom: 20px;
-}
+  & h3 {
+    padding-left: 12px;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 28px;
+    position: relative;
+    &:before {
+      content: "";
+      height: 28px;
+      width: 6px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: #24292e;
+    }
+  }
 
-.ql-container h3 {
-  margin-bottom: 16px;
-}
+  & p {
+    &:not(:last-child) {
+      margin-bottom: 24px;
+    }
+  }
 
-.ql-container h4 {
-  margin-bottom: 12px;
-}
+  & ul, ol {
+    margin: 0 0 0 34px;
+    padding: 0;
+    & li {
+      padding: 9px 0;
+      line-height: 1.6;
+    }
+    & li:first-child {
+      padding-top: 0;
+    }
+  }
 
-.ql-container h5 {
-  margin-bottom: 10px;
+  & ul {
+    list-style-type: disc;
+  }
 }
