--- a/src/components/forms/fields/EditorField/EditorField.scss
+++ b/src/components/forms/fields/EditorField/EditorField.scss
@@ -85,3 +85,32 @@
     list-style-type: disc;
   }
 }
+
+
+.comment-editor .ql-container {
+  font-size: 14px;
+  line-height: 1.56;
+  color: #24292e;
+
+  & p {
+    &:not(:last-child) {
+      margin-bottom: 18px;
+    }
+  }
+
+  & ul, ol {
+    margin: 0 0 0 18px;
+    padding: 0;
+    & li {
+      padding: 7px 0;
+      line-height: 1.6;
+    }
+    & li:first-child {
+      padding-top: 0;
+    }
+  }
+
+  & ul {
+    list-style-type: disc;
+  }
+}
