--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import '~react-quill/dist/quill.snow.css';
+
+/* тут мы избавляемся от смешения при появлении полосы прокрутки */
 html {
   overflow-x: hidden;
   width: 100vw !important;
@@ -5,13 +8,16 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 #root {
@@ -24,4 +30,3 @@ code {
   display: block;
   margin: 0 auto;
 }
-/*# sourceMappingURL=index.css.map */
