Add article photos (#212)
* Add articles photo uploader and articles album

* Add the ability to insert photos in the article

* 1

* feat: add photos to article

* commit after linter fix

* added uploading images from article's gallery to the server

* Fixes some bugs with requseting images from articles gallery to server

* last fixes on article image gallery

* fixes after first review

* One more commit after first review

Co-authored-by: spiridon209 <45230240+spiridon209@users.noreply.github.com>
Co-authored-by: spiridon209 <sivand888@gmail.com>
Co-authored-by: velialiev <velialiev00@gmail.com>
Co-authored-by: feniks916 <53240482+feniks916@users.noreply.github.com>
Co-authored-by: istamal <dagalaev@gmail.com>

--- a/src/components/forms/fields/EditorField/EditorField.css
+++ b/src/components/forms/fields/EditorField/EditorField.css
@@ -119,3 +119,22 @@
 .comment-editor .ql-container ul {
   list-style-type: disc;
 }
+
+.ql-snow .ql-editor .img-fluid.ql-align-center  {
+  clear: both;
+  margin: 0 30%;
+}
+
+.ql-snow .ql-editor .img-fluid {
+  max-width: 40%;
+  max-height: 40%;
+  float:left;
+  margin: 4px 10px 2px 0px;
+  border:1px solid #CCC;
+  padding:6px;
+}
+
+.ql-snow .ql-editor .img-fluid.ql-align-right  {
+  float:right;
+}
+
